# serverless-ml-aws

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/common/: utils.py
backend/lambdas/image_processor/: lambda_function.py
backend/lambdas/notification_handler/: lambda_function.py
backend/lambdas/presigned_url_generator/: lambda_function.py
backend/lambdas/rekognition_analyzer/: lambda_function.py
backend/lambdas/result_saver/: lambda_function.py
backend/lambdas/result_viewer/: lambda_function.py
docs/: README.full.md  changes.md  deployment.md  production.md
frontend/: .env.development  .env.example  SETUP.md  package-lock.json
frontend/public/: test-api.html
frontend/src/: App.css  App.jsx
frontend/src/components/: ImageUpload.css  ImageUpload.jsx  ResultsDisplay.css  ResultsDisplay.jsx
frontend/src/services/: api.js
scripts/: update-frontend-config.sh
terraform/: dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  step_functions.tf  variables.tf  versions.tf
