[project]
name = "serverless-ml-backend"
version = "0.1.0"
description = "Backend utilities for Serverless ML Lambdas"
requires-python = ">=3.11"
dependencies = ["boto3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
